--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@100;200;300;400;500;600;700&display=swap"
     rel="stylesheet">
-  <title>HW6</title>
+  <title>HW6 - iOS 26 Liquid Glass</title>
 </head>
 
 <body>
